caculate lengths of binary tree.

--- a/趣谈计算机协议/趣谈网络协议.md
+++ b/趣谈计算机协议/趣谈网络协议.md
@@ -25,7 +25,7 @@
 - 然后操作系统将IP包发给下一层，即MAC层。网卡将包发出去。由于这个包有MAC地址，因此它能够到达网关。
 - 网关通常是一个路由器，收到包后悔根据路由表得到去目的IP的方法。
 - 路由器连着许多个局域网，在每个局域网内部，都可以使用本地的地址MAC进行通信。
-- 一旦跨越局域网，需要拿出IP头，表明源IP地址与目的IP地址。沟通的协议称为路由协议，常用的协议有OSPF和BGP。<img src="趣谈网络协议.assets/image-20200720205005968.png" alt="image-20200720205005968" style="zoom:67%;" />
+- 一旦跨越局域网，需要拿出IP头，表明源IP地址与目的IP地址。沟通的协议称为**路由协议**，常用的协议有OSPF和BGP。<img src="趣谈网络协议.assets/image-20200720205005968.png" alt="image-20200720205005968" style="zoom:67%;" />
 - 而路由器与路由器之间是一个局域网，当网络包直到要转发去哪个路由器之后，还是要使用该局域网内部的MAC地址，通过下一个路由器的MAC地址，找到下一个路由器。
 - 最后一个路由器知道目标IP是哪，于是通过局域网内通信得到相应的目标服务器的MAC地址，通过这个MAC地址找到目标的服务器。
 - 目标服务器发现MAC地址对上了，就取下MAC头给操作系统的网络层；IP对上了就取下IP头，IP头里会写上一层封装的是TCP协议，然后将其交给传输层。
@@ -40,3 +40,6 @@
 
 
 
+#### 2.网络分层的含义是什么？
+
+网络为什么要分层？因为复杂的程序都要分层，这是程序设计的要求。
