add problems 0f n_queens and sudoku

--- a/趣谈计算机协议/趣谈网络协议.md
+++ b/趣谈计算机协议/趣谈网络协议.md
@@ -43,3 +43,5 @@
 #### 2.网络分层的含义是什么？
 
 网络为什么要分层？因为复杂的程序都要分层，这是程序设计的要求。
+
+BIOS的作用：读取硬盘的MBR启动扇区，将GRUB启动起来；然后将权力交给GRUB，加载作为根文件系统的initramfs文件；然后将权力交给内核，最后内核启动，初始化整个系统。
