add notes of linux

--- a/程序和进程并发.md
+++ b/程序和进程并发.md
@@ -1,4 +1,4 @@
-# 程序、进程、并发
+# 程序、进程、并发、并行
 
 #### 程序
 
@@ -23,3 +23,9 @@
 ##### 定义
 
 在操作系统中，一个时间段中有**多个进程都处于已经启动运行到运行完毕之间的状态**。但**任一时刻点上仍然只有一个进程在执行**。
+
+#### 并行
+
+##### 定义
+
+当系统有一个以上的CPU时，多个CPU可以同时执行不同的进程，这些进程互补抢占CPU资源，可以同时进行。
