--- a/趣谈计算机协议/趣谈网络协议.md
+++ b/趣谈计算机协议/趣谈网络协议.md
@@ -40,8 +40,65 @@
 
 
 
-#### 2.网络分层的含义是什么？
+### 2.网络分层的含义是什么？
 
 网络为什么要分层？因为复杂的程序都要分层，这是程序设计的要求。
 
 BIOS的作用：读取硬盘的MBR启动扇区，将GRUB启动起来；然后将权力交给GRUB，加载作为根文件系统的initramfs文件；然后将权力交给内核，最后内核启动，初始化整个系统。
+
+### 3.DNS协议
+
+#### 1、传统DNS存在的问题
+
+##### 1）域名缓存问题
+
+由于本地DNS服务器能做一个本地缓存，当有其他客户端询问DNS转IP的映射时，可能这个映射关系已经变更了，但本地缓存没有变，因此返回的是错误的结果。
+
+##### 2）域名转发问题
+
+比如A运营商的客户，访问自己运营商的DNS服务器，若A运营商去权威DNS服务器查询，返回一个部署在A运营商的网站地址，这样针对相同运营商的访问，就会快很多。
+
+若A运营商偷懒，将解析的请求转发给B运营商，B运营商去权威DNS服务器查询的话，DNS服务器返回的是在B运营商的网站地址，结果客户端每次访问都要跨运营商，速度就很慢。
+
+#### 2、HTTPDNS
+
+为了解决上述的问题，有了HTTPDNS，它不走传统的DNS解析，而是自己搭建基于HTTP协议的DNS服务器集群，分布在多个地点和多个运营商。
+
+一般是手机应用，手机上嵌入支持HTTPDNS的SDK。当客户端需要DNS解析时，直接通过HTTP协议进行请求这个服务器集群，得到就近的地址。相当于它不依赖默认的DNS路径，自行查找。
+
+<img src="趣谈网络协议.assets/image-20200824132522586.png" alt="image-20200824132522586" style="zoom:67%;" />
+
+HTTPDNS主要解决的是**缓存设计**和**调度设计**问题。
+
+##### 1、缓存设计
+
+为了加快解析引入缓存，但是产生了缓存不及时更新导致访问错误的问题。传统的缓存在本地DNS服务器处，客户端难以解决。
+
+而HTTPDNS在解析时使用HTTP请求，要实时更新时马上就能起作用。另一方面，本地维护缓存，放在客户端SDK处，过期时间、更新时间能自行控制。
+
+##### 2、缓存设计模式
+
+分为客户端、缓存、数据源三层。
+
+1. 应用架构：即应用、缓存、数据库，常见的有Tomcat、Redis、MySQL
+2. HTTPDNS：手机客户端、DNS缓存、HTTPDNS服务器
+
+<img src="趣谈网络协议.assets/image-20200824133353512.png" alt="image-20200824133353512" style="zoom:50%;" />
+
+SDK的缓存会严格按照缓存过期时间，若缓存没命中或已经过期，会发起一次解析，保障记录是更新的。此时直接调用HTTPDNS的接口（同步更新，对应cache-aside机制，先读缓存，同时将结果写入缓存），返回最新的记录，更新缓存。
+
+<img src="趣谈网络协议.assets/image-20200824154934916.png" alt="image-20200824154934916" style="zoom:67%;" />
+
+或者异步进行，添加一个解析任务到后台，由后台任务调用HTTPDNS的接口。对应refresh-ahead机制，业务应用仅仅访问缓存，当过期时定期刷新。
+
+<img src="趣谈网络协议.assets/image-20200824155258866.png" alt="image-20200824155258866" style="zoom:67%;" />
+
+##### 3、调度设计
+
+客户端嵌入SDK，可以知道该手机准确的位置、运营商等信息，HTTPDNS服务器可以根据这些信息选择最佳的服务器返回。
+
+若多个节点，客户端的SDK会收集网络请求数据如错误率、请求时间等质量数据，并发送到统计后台，进行分析并查看不同IP的服务质量。
+
+应用还能通过调用HTTPDNS的管理接口，配置不同服务质量的优先级、权重，HTTPDNS根据这些策略算出排序，优先访问优质的、低时延的IP地址。
+
+<img src="趣谈网络协议.assets/image-20200824161255690.png" alt="image-20200824161255690" style="zoom:67%;" />
