add some notes.

--- a/慕课网/慕课_第八章.md
+++ b/慕课网/慕课_第八章.md
@@ -44,6 +44,8 @@
 
 基本类型转换，有继承关系类对象和类指针间的转换。程序员需要自己确保转换是安全的。
 
+<img src="慕课_第八章.assets/image-20200911194807663.png" alt="image-20200911194807663" style="zoom:50%;" />
+
 ##### 4、dynamic_cast
 
 只能用于含有虚函数的类，必须要用在多态体系中。用于类层次间的向上和向下转化。
